Correct footer link to vulnerability program

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
                           <li><a href="https://github.com/firoorg/firo">Github</a></li>
                           <li><a href="https://sourceforge.net/projects/zcoin/files/">Sourceforge</a></li>
                           <li><a href="/branding/">Branding</a></li>
-                          <li><a href="https://zcoin.io/zcoin-vulnerability-bounty-program/">Vulnerability Program</a></li>
+                          <li><a href="https://firo.org/2018/07/15/firo-vulnerability-bounty-program.html">Vulnerability Program</a></li>
                           <li><a href="https://explorer.zcoin.io/">Explorer</a></li>
                       </ul>
                   </div>
